--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,42 @@
     <link href="./output.css" rel="stylesheet" />
   </head>
   <body class="font-boston">
-    <h1 class="text-8xl text-primary bg-secondary h-screen">
-      Iluminar! &#57409;
-    </h1>
+    <div
+      class="h-screen bg-[url(./imgs/fundo.png)] bg-center bg-cover bg-no-repeat"
+    >
+      <header
+        class="fixed w-full px-6 md:px-8 2xl:px-12 flex items-center justify-between gap-6"
+      >
+        <figure>
+          <img class="object-cover h-22" src="./imgs/logotipo-1.png" alt="" />
+        </figure>
+
+        <nav
+          class="hidden md:flex font-lato items-center gap-6 lg:gap-8 text-secondary font-semibold"
+        >
+          <ul class="flex items-center gap-6 lg:gap-8 md:text-lg">
+            <li class="hover:underline transition-all underline-offset-4">
+              <a href="">Tiragens</a>
+            </li>
+
+            <li class="hover:underline transition-all underline-offset-4">
+              <a href="">Quem sou eu</a>
+            </li>
+
+            <li class="hover:underline transition-all underline-offset-4">
+              <a href="">Contatos</a>
+            </li>
+          </ul>
+
+          <a
+            href="#"
+            class="px-4 h-12 text-md border border-secondary hover:bg-primary hover:text-secondary hover:border hover:border-secondary transition-all rounded-4xl bg-secondary text-primary flex justify-center items-center"
+          >
+            Agendamento
+          </a>
+        </nav>
+      </header>
+    </div>
+    <main class="bg-primary h-[500px]"></main>
   </body>
 </html>
