feat: inserir animação no menu.

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,8 @@
 
         <nav
           id="nav-menu"
-          class="hidden h-screen md:h-auto md:flex flex-col md:flex-row font-lato items-center gap-12 lg:gap-8 text-secondary font-semibold"
+          data-open="false"
+          class="transform transition-transform duration-300 translate-y-[-500px] md:translate-y-0 h-screen md:h-auto md:flex flex-col md:flex-row font-lato items-center gap-12 lg:gap-8 text-secondary font-semibold"
         >
           <ul
             class="flex items-center flex-col md:flex-row md:gap-8 gap-12 text-lg"
