feat: ajustar imagem de fundo.

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,12 @@
     <script src="./js/scroll.js" defer></script>
   </head>
 
-  <body
-    class="font-boston h-screen bg-primary bg-[url(./imgs/fundo.png)] bg-center bg-cover bg-no-repeat space-y-8 md:space-y-12"
-  >
+  <body class="font-boston h-screen bg-primary space-y-8 md:space-y-12">
+    <img
+      src="./imgs/fundo.png"
+      class="top-[100px] absolute min-h-screen inset-0 object-cover"
+      alt=""
+    />
     <header
       class="max-h-[88px] backdrop-blur-md z-50 px-6 md:px-8 fixed w-full 2xl:px-12 flex items-center justify-between flex-col md:flex-row"
     >
