--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
     <script src="./js/scroll.js" defer></script>
   </head>
 
-  <body class="font-boston h-screen bg-primary space-y-8 md:space-y-12">
+  <body
+    class="font-boston h-screen bg-primary space-y-24 md:space-y-32 lg:space-y-48"
+  >
     <img
       src="./imgs/fundo.png"
       class="top-[100px] absolute min-h-screen inset-0 object-cover"
@@ -86,16 +88,16 @@
 
     <section
       id="tiragens"
-      class="max-w-7xl mx-auto h-screen scroll-mt-[88px] px-6 md:px-16 py-4 flex flex-col items-center gap-8 md:gap-12"
+      class="max-w-7xl mx-auto scroll-mt-[88px] px-6 md:px-16 py-4 flex flex-col items-center gap-8 md:gap-12"
     >
       <h1
-        class="price-title text-balance text-4xl sm:text-7xl font-[100] text-secondary text-center"
+        class="price-title text-balance text-5xl sm:text-7xl font-[100] text-secondary text-center"
       >
         Tiragem
       </h1>
 
       <div
-        class="price-cards grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3 md:gap-6 2xl:gap-12"
+        class="w-full price-cards grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3 md:gap-6 2xl:gap-12"
       >
         <div
           class="sticky sm:static top-[100px] bg-primary border border-secondary rounded-md p-6 text-center inline-flex flex-col items-center gap-6"
@@ -104,7 +106,7 @@
             <img
               src="./imgs/mesa-real.png"
               alt="Imagem representando mesa real"
-              class="aspect-square"
+              class="aspect-square max-h-[200px] md:max-h-auto"
             />
           </figure>
 
@@ -112,7 +114,9 @@
             &#57417;esa Real <span class="block">Tiragem Completa</span>
           </h1>
 
-          <span class="inline-block text-7xl text-secondary">R$ 155</span>
+          <span class="inline-block text-5xl md:text-7xl text-secondary"
+            >R$ 155</span
+          >
 
           <a
             href="#"
@@ -129,7 +133,7 @@
             <img
               src="./imgs/caminhos-coracao.png"
               alt="Imagem representando mesa real"
-              class="aspect-square"
+              class="aspect-square max-h-[200px] md:max-h-auto"
             />
           </figure>
 
@@ -138,7 +142,9 @@
             <span class="block"> &#57409;bjetiva</span>
           </h1>
 
-          <span class="inline-block text-7xl text-secondary">R$ 44</span>
+          <span class="inline-block text-5xl md:text-7xl text-secondary"
+            >R$ 44</span
+          >
 
           <a
             href="#"
@@ -155,7 +161,7 @@
             <img
               src="./imgs/pergunta-objetiva.png"
               alt="Imagem representando mesa real"
-              class="aspect-square"
+              class="aspect-square max-h-[200px] md:max-h-auto"
             />
           </figure>
 
@@ -163,7 +169,9 @@
             &#57417;esa Real <span class="block">Tiragem Completa</span>
           </h1>
 
-          <span class="inline-block text-7xl text-secondary">R$ 33</span>
+          <span class="inline-block text-5xl md:text-7xl text-secondary"
+            >R$ 33</span
+          >
 
           <a
             href="#"
@@ -175,6 +183,53 @@
       </div>
     </section>
 
-    <div class="h-[2000px] w-full"></div>
+    <section
+      id="quem-sou-eu"
+      class="max-w-7xl mx-auto scroll-mt-[88px] px-6 md:px-16 py-4 flex flex-col items-center gap-8 md:gap-12"
+    >
+      <h1
+        class="quem-sou-eu__titulo price-title text-balance text-5xl sm:text-7xl font-[100] text-secondary text-center"
+      >
+        Quem sou eu ?
+      </h1>
+
+      <div
+        class="flex flex-col items-center lg:items-start lg:flex-row gap-12 lg:gap-20 font-lato text-white"
+      >
+        <img
+          src="./imgs/thayane.png"
+          alt="Imagem da taróloga"
+          class="quem-sou-eu__img object-cover lg:max-w-1/2 w-full sm:w-auto rounded-[40px] max-h-[600px]"
+        />
+
+        <div class="text-md md:text-2xl quem-sou-eu__conteudo">
+          <p>
+            Sou Thayane Silvestri, taróloga, oraculista e apaixonada por
+            desvendar os mistérios da alma. Ao longo dos anos, senti uma forte
+            conexão com o universo espiritual e, em um certo tempo transformei
+            esse dom em uma missão: ajudar pessoas a encontrarem clareza,
+            propósito e direcionamento através dos oráculos. Minha abordagem é
+            intuitiva, sensível e ética. Trabalho com o Baralho Cigano, Tarô
+            Egípcio e Tarô de Osho, ferramentas que me permitem oferecer
+            leituras profundas e personalizadas. Cada consulta é uma
+            oportunidade para iluminar caminhos, esclarecer dúvidas e trazer
+            autoconhecimento. Acredito que o Tarot não prevê o futuro, mas sim
+            nos guia para tomar as melhores decisões. Meu objetivo é que, ao
+            final de cada sessão, você se sinta mais seguro(a), confiante e
+            preparado(a) para seguir em frente com mais leveza e sabedoria.
+          </p>
+          <p>
+            Se você busca respostas, um novo olhar sobre sua jornada ou apenas
+            um momento de conexão consigo mesmo, estou aqui para te ajudar.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <figure>
+      <img src="./imgs//barra.png" alt="" />
+    </figure>
+
+    >
   </body>
 </html>
