--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,11 @@
           </li>
 
           <li class="hover:underline transition-all underline-offset-4">
-            <a href="">Quem sou eu</a>
+            <a href="#quem-sou-eu">Quem sou eu</a>
           </li>
 
           <li class="hover:underline transition-all underline-offset-4">
-            <a href="">Contatos</a>
+            <a href="#contatos">Contatos</a>
           </li>
         </ul>
 
@@ -66,7 +66,11 @@
       <div
         class="relative overflow-hidden flex flex-col justify-center items-center px-6 md:px-8 md:pt-32 2xl:px-12"
       >
-        <img src="./imgs/fundo.png" class="absolute inset-0" alt="" />
+        <img
+          src="./imgs/fundo.png"
+          class="absolute inset-0 object-cover h-screen w-full"
+          alt="Imagem de fundo"
+        />
         <h1
           id="titulo-principal"
           class="text-balance text-4xl sm:text-7xl font-[100] text-white text-center"
