--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
           >
 
           <a
-            href="#"
+            href="http://wa.me/5548996922646"
             class="max-w-2/3 w-full px-4 h-12 text-md border border-secondary hover:bg-primary hover:text-secondary hover:border hover:border-secondary transition-all rounded-4xl bg-secondary text-primary flex justify-center items-center"
           >
             Agendar
@@ -154,7 +154,7 @@
           >
 
           <a
-            href="#"
+            href="http://wa.me/5548996922646"
             class="max-w-2/3 w-full px-4 h-12 text-md border border-secondary hover:bg-primary hover:text-secondary hover:border hover:border-secondary transition-all rounded-4xl bg-secondary text-primary flex justify-center items-center"
           >
             Agendar
@@ -181,7 +181,7 @@
           >
 
           <a
-            href="#"
+            href="http://wa.me/5548996922646"
             class="max-w-2/3 w-full px-4 h-12 text-md border border-secondary hover:bg-primary hover:text-secondary hover:border hover:border-secondary transition-all rounded-4xl bg-secondary text-primary flex justify-center items-center"
           >
             Agendar
